tt-rss.css
/* ... */
tr.odd td.headlineContent, tr.oddUnread td.headlineContent {
        display : block;
        overflow : hidden;
        height : 1em;
}

tr.oddSelected td.headlineContent,
tr.evenSelected td.headlineContent,
tr.oddUnreadSelected td.headlineContent,
tr.evenUnreadSelected td.headlineContent {
        display : block;
        overflow : hidden;
        height : 1em;
        background-color : #e0e0ff;
} */

div.postHeader td.postDate {
        font-size : x-small;
        text-align : right;
        color : gray;
}

div.postHeader td.postDateRTL {
        font-size : x-small;
        text-align : left;
        color : gray;
}

#feedUpdateErrors {
        display : none;
}

#allEntryTags {
        font-size : x-small;
        border-width : 0px 0px 1px 0px;
        border-style : solid;
        border-color : #c0c0c0;
        padding-bottom : 5px;
        display : none;
}

/*td.hlContent {
        overflow : hidden;
        height : 1em;
        display : block;
} */

td.hlMarkedPic, td.hlSelectRow, td.hlUpdated, td.hlFeed {
        height : 1em;
}

div.cdmArticle {
        border : 1px solid #f0f0f0;
        background-color : #fafafa;
        -moz-border-radius : 5px;
        margin : 10px 10px 0px 10px;
        padding : 10px;
}

div.cdmArticleUnread {
        border : 1px solid #d5f1f4;
        background-color : #fafeff;
        -moz-border-radius : 5px;
        margin : 10px 10px 0px 10px;
        padding : 10px;
}

div.cdmArticleSelected, div.cdmArticleUnreadSelected {
          -moz-border-radius : 5px;
        margin : 10px 10px 0px 10px;
        padding : 10px;
        background-color : #fff7d5;
		  border : 1px solid #e7d796;
}

div.cdmArticleUnread div.cdmHeader a.title, 
div.cdmArticleUnreadSelected div.cdmHeader a.title {
        font-weight : bold;
}

div.cdmHeader {
        padding-bottom : 5px;
}

div.cdmFooter {
        font-size : x-small;
        color : gray;
        padding-top : 5px;
}

div.cdmFooter input, div.cdmHeader input, div.cdmFooter img {
        margin : 0px;
}

div.cdmHeader, div.cdmHeader a {
        color : gray;
        font-size : x-small;
}

div.cdmHeader a:hover {
        color : #4684ff;
}

div.cdmContent {
        margin-bottom : 5px;
}

a.warning {
        color : #f04040;
}

img.closeButton {
        border-width : 0px;
        float : right;
}

span.groupPrompt {
        font-size : x-small;
        color : #4684ff;
}

ul.userFeedList {
        height : 300px;
        overflow : auto;
        list-style-type : none;
		  border : 1px solid #88b0f0;
        background-color : white;
}

/* #browseBigFeedList li.oddSelected {
        border : 1px solid #d0d0f6;
        background-color : #eaeaff;
        -moz-border-radius : 5px;
} */

ul.browseFeedList {
        height : 300px;
        overflow : auto;
        list-style-type : none;
        margin : 0px 0px 5px 0px;
        padding : 0px;
		  border : 1px solid #88b0f0;
		  background-color : white;
}

ul.browseFeedList li {
        margin : 0px;
        padding : 0px;
}

span.subscribers {
        color : #808080;
}

div.subscribers {
        color : #808080;
        font-size : x-small;
        float : right;
}

input.feedBrowseCB {
        margin-right : 1em;
}

div.browserDetails {
        margin : 5px 5px 5px 5px;
        display : none;
        padding : 5px;
}

ul.compact {
        list-style-type : none;
        margin : 0px;
        padding : 0px;
}

ul.compact li {
        margin : 0px;
        padding : 0px;
}

div.browserFeedInfo {
        font-size : x-small;
		  border : 1px solid #88b0f0;
		  background-color : #ecf4ff;
		  -moz-border-radius : 5px;
		  padding : 10px;
}

div.browserFeedInfo div.detailsPart {
        margin : 5px 0px 5px 5px;       
}

div.cdmContent a {
        color : #4684ff;
}

div.cdmContent a:hover {
        color : black;
}

a.cdmToggleLink {
        color : #808080;
        font-size : x-small;
}

a.cdmToggleLink:hover {
        color : #4684ff;
}

.noborder {
        border-width : 0px;
}

#debug_output {
        width : 400;
        height : 200;
        right : 20;
        bottom : 20;
        background-color : white;
        display : none;
        z-index : 999;
        position : absolute;
        border : 1px solid #c0c0c0;
        overflow : auto;
        margin : 0px;
        padding : 0px;
        list-style-type : none;
}

#debug_output li {
        margin : 0px;
        padding : 0px;
        font-size : x-small;
}

#overlay {
        background : white;
        left : 0;
        top : 0;
        height : 100%;
        width : 100%;
        z-index : 100;
        position : absolute;
}

#overlay_inner {
        font-weight : bold;
        text-align : center;
        margin : 10px;
}

#fatal_error {
        background : white;
        left : 0;
        top : 0;
        height : 100%;
        width : 100%;
        z-index : 200;
        display : none;
        position : absolute;
}

#fatal_error_inner {
        font-weight : bold;
        margin : 10px;
        color : red;
}

#fatal_error_msg {
        border : 1px solid #c0c0c0;
        background-color : #f0f0f0;
        color : black;
        padding : 10px;
        font-weight : normal;
}

div.noDaemonWarning {
        position : absolute;
		  background-color : #ecf4ff;		  
		  border : 1px solid #88b0f0;
		  padding : 10px;
		  margin : 5px;
		  z-index : 2;
}

